tests/ui/type-alias-impl-trait/method_resolution4.current.stderr
error[E0307]: invalid `self` parameter type: `Bar<Foo>`
  --> $DIR/method_resolution4.rs:27:18
   |
LL |     fn foo(self: Bar<Foo>) {
   |                  ^^^^^^^^
   |
   = note: type of `self` must be `Self` or a type that dereferences to it
   = help: consider changing to `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error[E0307]: invalid `self` parameter type: `&Bar<Foo>`
  --> $DIR/method_resolution4.rs:32:20
   |
LL |     fn foomp(self: &Bar<Foo>) {
   |                    ^^^^^^^^^
   |
   = note: type of `self` must be `Self` or a type that dereferences to it
   = help: consider changing to `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0307`.
